--- a/web/css/style.css
+++ b/web/css/style.css
@@ -197,7 +197,7 @@ aside h3 span {
 
 #accordion .panel-title {
 	color: #fff;
-	font-size: 18px;
+	font-size: 28px;
 	font-family: 'Roboto Slab', serif;
 	font-weight: 300;
 }
@@ -215,9 +215,10 @@ aside h3 span {
 #accordion .panel-body {
 	color: #fff;
 	font-family: 'Roboto Slab', serif;
-	font-weight: 300;
+    /*font-weight: bold;*/
+	font-weight: 350;
 	text-align: justify;
-	font-size: 16px;
+	font-size: 18px;
 }
 
 #accordion .panel-body li {
