--- a/web/css/style.css
+++ b/web/css/style.css
@@ -111,10 +111,10 @@ aside h3 span {
 }
 
 #config-drop-zone {
-    color: #fff;
+    color: red;
     height: 200px;
     width: 400px;
-    border: 2px dashed white;
+    border: 2px dashed red;
     border-radius: 20px;
     margin: 40px;
     font-size: 30px;
@@ -189,6 +189,7 @@ aside h3 span {
     background: url("../images/input-bg.png") repeat;
     height: 100px;
     margin: 30px 0px;
+    overflow: auto;
 }
 
 
