--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1,3 +1,11 @@
+/*
+ * Copyright (c) 2017 Fan Zhang
+ * This work is available under the "MIT license".
+ * Please see the file COPYING in this source
+ * distribution for license terms.
+ */
+
+
 /*** General style ***/
 
 html, body {
